<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.humor.porteriapp.IdentificationActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/identification"
        android:textColor="@color/md_black_1000"
        android:textSize="30sp"
        android:textAlignment="center"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/identiExplain"
        android:textColor="@color/md_black_1000"
        android:textSize="25sp"
        android:textAlignment="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/personalPass"
        android:layout_marginLeft="110dp"
        android:id="@+id/personalPass"
        android:inputType="numberPassword"
        android:maxLength="6"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginLeft="145dp"
        android:onClick="send"
        android:id="@+id/sendButton"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/msgBox"/>


</LinearLayout>
