<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.humor.porteriapp.WelcomeActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/md_black_1000"
        android:textSize="30sp"
        android:textAlignment="center"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/md_black_1000"
        android:textSize="25sp"
        android:textAlignment="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/entrance"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="1sp"
        android:onClick="connect"
        android:text="@string/connect" />

</LinearLayout>
